--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
         function LocalHost() {
             var host = window.location.hostname;
-            if (host == "localhost" || host == "127.0.0.1")
+            if (host == "localhost" || host == "127.0.0.1" || host=="github.com/za4emmne/DDforTG/") )
                 return true;
             else return false;
         }
